added contact information

--- a/contact.html
+++ b/contact.html
@@ -27,5 +27,10 @@
                     </ul>
             </div>
         </nav>
+        <div class="right">
+            <h3>Contact</h3>
+            <ul>
+                <li>Phone: </li>
+                <li>Email:zhill@zacharyhill.co
     </body>
 </html>
