index.html built and entering UAT

--- a/architecture.html
+++ b/architecture.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Zachary Hill - Contact</title>
+        <title>Zachary Hill's Resume</title>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-5HRJ53HCZD"></script>
         <script>
@@ -44,22 +44,6 @@
                     </ul>
             </div>
         </nav>
-        <div class="right">
-            <h3>Contact</h3>
-            <ul>
-                <li>Phone: </li>
-                <li>Email:zhill@zacharyhill.co</li>
-            </ul>
-        </div>
-        <!-- LinkedIn Icon and Link -->
-        <div class="right">
-            <a href="https://www.linkedin.com/in/zachary-hill-1b1b5b1a0/"><i class="fab fa-linkedin"></i></a>
-        </div>
-        <!-- GitHub Icon and Link -->
-        <div class="right">
-            <a href="https://github.com/zachreborn"><i class="fa-brands fa-github"></i></a>
-        </div>
-        <!-- Footer Copyright-->
         <footer class="py-5 bg-dark">
             <div class="container">
                 <p class="m-0 text-center text-white"><i class="fa-regular fa-copyright"></i> 2023 Zachary Hill</p>
