--- a/index.html
+++ b/index.html
@@ -3,62 +3,167 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Zachary Hill's</title>
-        <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
-        <link rel="stylesheet" href="https://kit.fontawesome.com/aa3ffadad5.css" crossorigin="anonymous">
+        <title>Zachary Hill - Resume</title>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-5HRJ53HCZD"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-5HRJ53HCZD');
+        </script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;1,100&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
+        <script src="https://kit.fontawesome.com/aa3ffadad5.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <div class="container">
-                <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbar">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
-                    </ul>
-            </div>
-        </nav>
+        <!-- Navigation Bar-->
+        <header>
+            <a class="logo" href="index.html"><span class="dot">.</span>Zachary Hill</a>
+            <nav class="navbar">
+                <ul class="navbar_links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="architecture.html">About This Website</a></li>
+                </ul>
+            </nav>
+        </header>
+        <!-- Header-->
         <div class="container">
-            <div class="header">
-                <h1>Zachary Hill</h1>
-                <h2>Chief Technology Officer</h2>
-            </div>
-            <div class="content">
-                <div class="left">
-                    <h3>Skills</h3>
-                    <ul>
-                        <li>AWS</li>
-                        <li>Python</li>
-                        <li>VMware</li>
-                        <li>Cisco</li>
-                        <li>LAN/WAN Architecture</li>
-                        <li>Cloud Architecture</li>
-                    </ul>
-                    <h3>Experience</h3>
-                    <ul>
-                        <li>Chief Technology Officer - Think|Stack</li>
-                        <li>VP of Architecture - Think|Stack</li>
-                        <li>RedZone</li>
-                        <li>DRAW Enterprises</li>
-                    </ul>
-                    <h3>Education</h3>
-                    <ul>
-                        <li>DeVry</li>
-                    </ul>
+            <div class="greetings">
+                <div class="greetings_text">
+                    <h1>Heya, I'm <span class="greetings_emphasis">Zachary.</span></h1>
+                    <h2>Chief Technology Officer</h2>
+                    <p>Technologist / Leader / Maven / Architect / Engineer / Solver of Problems / Adventure Enthusiast</p>
                 </div>
-                <div class="right">
-                    <h3>Contact</h3>
-                    <ul>
-                        <li>Phone: </li>
-                        <li>Email:zhill@zacharyhill.co
+                <img src="./media/images/ts_photo_zachary_bw.jpg" alt="Zachary Hill laughing while looking into the camera." id="headshot_image">
+            </div>
+        </div>
+        <!-- Content-->
+        <div class="experience container">
+            <div class="experience_header">
+                <h2><span class="dot">.</span>Experience</h2>
+            </div>
+            <div class="experience_content">
+                <h4 class="experience_date_header">2018 - Present</h4>
+                <p class="experience_title">Chief Technology Officer</p>
+                <p class="experience_company">Think|Stack</p>
+                <p class="experience_summary">Technical visionary, strategist, and team leader. I built the services and projects we sold to our customers with an eye towards common sense and putting myself in the shoes of our customers. My focus was on understanding problems in order to design and build out solutions that could be implemented by a team which included our engineers and our customer's technical team(s).</p>
+            </div>
+            <div class="experience_content">
+                <h4 class="experience_date_header">2016 - 2018</h4>
+                <p class="experience_title">VP of Architecture</p>
+                <p>Think|Stack</p>
+                <p class="experience_summary">Built out a project team in my first year in order to expand projects offered. Turned my focus to designing and building out a cloud practice, specifically with AWS and Microsoft 365 centered around a DevSecOps framework to support scalable, flexible, and secure projects and management of cloud environments. Wrote over 25,000 lines of terraform code to automate and standardize projects. Took over the sales team technical engagements, quoting, and approval process for jobs going to our customers.</p>
+            </div>
+            <div class="experience_content">
+                <h4 class="experience_date_header">2008 - 2015</h4>
+                <p class="experience_title">Senior Network/Systems Engineer</p>
+                <p>RedZone Technologies</p>
+                <p class="experience_summary">Took control of all networking projects within my first three months while self teaching myself CCNA courses. Focused on learning from the strongest senior engineers and quickly took lead on all projects assigned to me. Was the primary senior network and virtualization engineer after proving myself with <strong>200+</strong> network implementation projects and <strong>100+</strong> virtualization implementation projects.</p>
+            </div>
+            <div class="experience_content">
+                <h4 class="experience_date_header">2006 - 2008</h4>
+                <p class="experience_title">Helpdesk Technician</p>
+                <p>DRAW Enterprises</p>
+                <p class="experience_summary">Honed my technical skills and quickly showed aptitude to manage servers and key environment components such as: citrix, network devices, servers, and firewalls.</p>
+            </div>
+        </div>
+        <div class="skills container">
+            <div class="skills_header">
+                <h2><span class="dot">.</span>Skills</h2>
+            </div>
+            <div class="skills_content">
+                <!-- Architecture & Design -->
+                <h4 class="skill">Architecture & Design
+                    <span>98%</span>
+                </h4>
+                <div class="meter">
+                    <meter min="0" max="100" value="98";></meter>
+                </div>
+                <!-- Leadership -->
+                <h4 class="skill">Leadership
+                    <span>93%</span>
+                </h4>
+                <div class="meter">
+                    <meter min="0" max="100" value="93";></meter>
+                </div>
+                <!-- Technology Strategy -->
+                <h4 class="skill">Technology Strategy
+                    <span>95%</span>
+                </h4>
+                <div class="meter">
+                    <meter min="0" max="100" value="95";></meter>
+                </div>
+                <!-- Cloud -->
+                <h4 class="skill">Cloud
+                    <span>98%</span>
+                </h4>
+                <div class="meter">
+                    <meter min="0" max="100" value="98";></meter>
+                </div>
+                <!-- DevSecOps/Platform Engineering -->
+                <h4 class="skill">DevSecOps/Platform Engineering
+                    <span>88%</span>
+                </h4>
+                <div class="meter">
+                    <meter min="0" max="100" value="88";></meter>
+                </div>
+
+                <h4 class="skill">Cybersecurity
+                    <span>85%</span>
+                </h4>
+                <div class="meter">
+                    <meter min="0" max="100" value="85";></meter>
+                </div>
+                <!-- Networking -->
+                <h4 class="skill">Networking
+                    <span>95%</span>
+                </h4>
+                <div class="meter">
+                    <meter min="0" max="100" value="95";></meter>
+                </div>
+                <!-- Virtualization -->
+                <h4 class="skill">Virtualization
+                    <span>95%</span>
+                </h4>
+                <div class="meter">
+                    <meter min="0" max="100" value="95";></meter>
+                </div>
+                <!-- Programming -->
+                <h4 class="skill">Programming
+                    <span>70%</span>
+                </h4>
+                <div class="meter">
+                    <meter min="0" max="100" value="70";></meter>
+                </div>
+            </div>
+        </div>
+        <div class="education container">
+            <div class="education_header">
+                <h2><span class="dot">.</span>Education & Certifications</h2>
+            </div>
+            <div class="education_content">
+                <ul>
+                    <li>AWS Architect - Professional | 2021 & 2019</li>
+                    <li>AWS Architect - Associate | 2021 & 2019</li>
+                    <li>Next Generation Leaders Program | 2018</li>
+                    <li>VMware Certified Professional - Data Center Virtualization | 2012 & 2015</li>
+                    <li>CCNP (previously held) | 2015</li>
+                    <li>CCNA (previously held) | 2010</li>
+                    <li>DeVry University | 2005 - 2006</li>
+                </ul>
+            </div>
+        </div>
+        <!-- Footer Copyright-->
+        <footer>
+            <div class="footer">
+                <p"><i class="fa-regular fa-copyright"></i> 2023 | Zachary Hill</p>
+            </div>
+        </footer>
     </body>
 </html>
