updated the navbar,footer, and converted all pages to my custom css

--- a/about.html
+++ b/about.html
@@ -13,69 +13,31 @@
 
         gtag('config', 'G-5HRJ53HCZD');
         </script>
-        <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;1,100&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/aa3ffadad5.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!-- Navigation Bar-->
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <div class="container">
-                <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div id="name">
-                    <a class="nav-link" href="index.html"><h4>Zachary Hill</h4></a>
-                </div>
-                <div class="collapse navbar-collapse" id="navbar">
-                    <ul class="navbar-nav mx-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="architecture.html">About This Website</a>
-                        </li>
-                    </ul>
-            </div>
-        </nav>
-        <div class="body-container">
-            <div class="container-fluid main-body">
-                <div class="row">
-                    <div class="col-md-6">
-                        <h1 class="display-4">Zachary Hill</h1>
-                        <h2 class="display-5">Chief Technology Officer</h2>
-                    </div>
-                    <div class="col-md-6">
-                        <img src="https://static.pingendo.com/img-placeholder-1.svg" class="img-fluid">
-                    </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <h3>Code</h3>
-                        <ul>
-                            <li>Technology should simplify</li>
-                            <li>Transparent engineering</li>
-                            <li>Security in the foundation</li>
-                            <li>Productivity through automation</li>
-                            <li>Redundancy and resiliency</li>
-                        </ul>
-                    </div>
-                <div class="row">
-                    <p>Career-wise, I'm highly passionate about learning and excelling at technology which is both intelligent and efficient. My firm belief is that when you spend the time designing and planning on how to best implement technology, everyone's lives become easier. Whether that be the team deploying, the support team, or the end user. This is why early on I drifted towards both dynamic routing and virtualization as my professional specialties. Nowadays you'll find me writing python to combine various APIs, building AWS environments via Terraform, or working with my team to help push their boundaries on what is possible.</p>
-                    <p>Personally, I'm extremely passionate about living a relatively stress free life where each and every day counts. Years ago I had cancer and I've let that shape me into the person I am today. I've always had the drive to do more, but mortality pushed me to the next level. I'm always active and doing something, whether that be hiking one day, kayaking the next, or playing with a new piece of software/hardware that just came down the pipeline. I'll often spend weekends buried in my dev lab at home just to understand the design process or engineering behind a clever piece of software or implementing something I wish to learn more about.</p>
-                    <p>I'm never content with knowing just enough and it'd certainly be said that I dive deep into the nitty gritty of a subject once it has piqued my interest.</p>
-                </div>
-            </div>
-        </div>
+        <header>
+            <a class="logo" href="index.html"><span class="dot">.</span>Zachary Hill</a>
+            <nav class="navbar">
+                <ul class="navbar_links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="architecture.html">About This Website</a></li>
+                </ul>
+            </nav>
+        </header>
+        <!-- Header-->
+        
         <!-- Footer Copyright-->
-        <footer class="py-5 bg-dark">
-            <div class="container">
-                <p class="m-0 text-center text-white"><i class="fa-regular fa-copyright"></i> 2023 Zachary Hill</p>
+        <footer>
+            <div class="footer">
+                <p"><i class="fa-regular fa-copyright"></i> 2023 | Zachary Hill</p>
             </div>
         </footer>
     </body>
