--- a/architecture.html
+++ b/architecture.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Zachary Hill's Resume</title>
+        <title>Zachary Hill - Website Architecture</title>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-5HRJ53HCZD"></script>
         <script>
@@ -13,40 +13,31 @@
 
         gtag('config', 'G-5HRJ53HCZD');
         </script>
-        <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;1,100&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/aa3ffadad5.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!-- Navigation Bar-->
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <div class="container">
-                <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div id="name">
-                    <a class="nav-link" href="index.html"><h4>Zachary Hill</h4></a>
-                </div>
-                <div class="collapse navbar-collapse" id="navbar">
-                    <ul class="navbar-nav mx-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="architecture.html">About This Website</a>
-                        </li>
-                    </ul>
-            </div>
-        </nav>
-        <footer class="py-5 bg-dark">
-            <div class="container">
-                <p class="m-0 text-center text-white"><i class="fa-regular fa-copyright"></i> 2023 Zachary Hill</p>
+        <header>
+            <a class="logo" href="index.html"><span class="dot">.</span>Zachary Hill</a>
+            <nav class="navbar">
+                <ul class="navbar_links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="architecture.html">About This Website</a></li>
+                </ul>
+            </nav>
+        </header>
+        <!-- Header-->
+        
+        <!-- Footer Copyright-->
+        <footer>
+            <div class="footer">
+                <p"><i class="fa-regular fa-copyright"></i> 2023 | Zachary Hill</p>
             </div>
         </footer>
     </body>
