--- a/error.html
+++ b/error.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Zachary Hill - Resume</title>
+        <title>Zachary Hill - Error</title>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-5HRJ53HCZD"></script>
         <script>
