added additional photos and linking them in about.html

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <div class="container">
             <div class="greetings">
                 <div class="greetings_text">
-                    <h1>Heya, I'm <span class="greetings_emphasis">Zachary.</span></h1>
+                    <h1>Hi, I'm <span class="greetings_emphasis">Zachary.</span></h1>
                     <h2>Chief Technology Officer</h2>
                     <p>Technologist / Leader / Maven / Architect / Engineer / Solver of Problems / Adventure Enthusiast</p>
                 </div>
-                <img src="./media/images/ts_photo_zachary_bw.jpg" alt="Zachary Hill laughing while looking into the camera." id="headshot_image">
+                <img src="./media/images/ts_zachary_bw.jpg" alt="Zachary Hill laughing while looking into the camera." id="headshot_image">
             </div>
         </div>
         <!-- Content-->
