responsive changes for smaller screen sizes and tweaking of margins

--- a/index.html
+++ b/index.html
@@ -33,48 +33,48 @@
             </nav>
         </header>
         <!-- Header-->
-        <div class="container">
-            <div class="greetings">
-                <div class="greetings_text">
-                    <h1>Hi, I'm <span class="greetings_emphasis">Zachary.</span></h1>
-                    <h2>Chief Technology Officer</h2>
-                    <p>Technologist / Leader / Maven / Architect / Engineer / Solver of Problems / Adventure Enthusiast</p>
-                </div>
-                <img src="./media/images/ts_zachary_bw.jpg" alt="Zachary Hill laughing while looking into the camera." id="headshot_image">
+        <div class="greetings container">
+            <div class="greetings_text">
+                <h1>Hi, I'm <span class="greetings_emphasis">Zachary.</span></h1>
+                <h2>Chief Technology Officer</h2>
+                <p>Technologist / Leader / Maven / Architect / Engineer / Solver of Problems / Adventure Enthusiast</p>
             </div>
+            <img src="./media/images/ts_zachary_bw.jpg" alt="Zachary Hill laughing while looking into the camera." id="headshot_image">
         </div>
         <!-- Content-->
         <div class="experience container">
-            <div class="experience_header">
+            <div class="experience header">
                 <h2><span class="dot">.</span>Experience</h2>
             </div>
-            <div class="experience_content">
-                <h4 class="experience_date_header">2018 - Present</h4>
-                <p class="experience_title">Chief Technology Officer</p>
-                <p class="experience_company">Think|Stack</p>
-                <p class="experience_summary">Technical visionary, strategist, and team leader. I built the services and projects we sold to our customers with an eye towards common sense and putting myself in the shoes of our customers. My focus was on understanding problems in order to design and build out solutions that could be implemented by a team which included our engineers and our customer's technical team(s).</p>
-            </div>
-            <div class="experience_content">
-                <h4 class="experience_date_header">2016 - 2018</h4>
-                <p class="experience_title">VP of Architecture</p>
-                <p>Think|Stack</p>
-                <p class="experience_summary">Built out a project team in my first year in order to expand projects offered. Turned my focus to designing and building out a cloud practice, specifically with AWS and Microsoft 365 centered around a DevSecOps framework to support scalable, flexible, and secure projects and management of cloud environments. Wrote over 25,000 lines of terraform code to automate and standardize projects. Took over the sales team technical engagements, quoting, and approval process for jobs going to our customers.</p>
-            </div>
-            <div class="experience_content">
-                <h4 class="experience_date_header">2008 - 2015</h4>
-                <p class="experience_title">Senior Network/Systems Engineer</p>
-                <p>RedZone Technologies</p>
-                <p class="experience_summary">Took control of all networking projects within my first three months while self teaching myself CCNA courses. Focused on learning from the strongest senior engineers and quickly took lead on all projects assigned to me. Was the primary senior network and virtualization engineer after proving myself with <strong>200+</strong> network implementation projects and <strong>100+</strong> virtualization implementation projects.</p>
-            </div>
-            <div class="experience_content">
-                <h4 class="experience_date_header">2006 - 2008</h4>
-                <p class="experience_title">Helpdesk Technician</p>
-                <p>DRAW Enterprises</p>
-                <p class="experience_summary">Honed my technical skills and quickly showed aptitude to manage servers and key environment components such as: citrix, network devices, servers, and firewalls.</p>
+            <div class="test_container">
+                <div class="experience_content">
+                    <h4 class="experience_date_header">2018 - Present</h4>
+                    <p class="experience_title">Chief Technology Officer</p>
+                    <p class="experience_company">Think|Stack</p>
+                    <p class="experience_summary">Technical visionary, strategist, and team leader. I built the services and projects we sold to our customers with an eye towards common sense and putting myself in the shoes of our customers. My focus was on understanding problems in order to design and build out solutions that could be implemented by a team which included our engineers and our customer's technical team(s).</p>
+                </div>
+                <div class="experience_content">
+                    <h4 class="experience_date_header">2016 - 2018</h4>
+                    <p class="experience_title">VP of Architecture</p>
+                    <p>Think|Stack</p>
+                    <p class="experience_summary">Built out a project team in my first year in order to expand projects offered. Turned my focus to designing and building out a cloud practice, specifically with AWS and Microsoft 365 centered around a DevSecOps framework to support scalable, flexible, and secure projects and management of cloud environments. Wrote over 25,000 lines of terraform code to automate and standardize projects. Took over the sales team technical engagements, quoting, and approval process for jobs going to our customers.</p>
+                </div>
+                <div class="experience_content">
+                    <h4 class="experience_date_header">2008 - 2015</h4>
+                    <p class="experience_title">Senior Network Engineer & Systems Engineer</p>
+                    <p>RedZone Technologies</p>
+                    <p class="experience_summary">Took control of all networking projects within my first three months while self teaching myself CCNA courses. Focused on learning from the strongest senior engineers and quickly took lead on all projects assigned to me. Was the primary senior network and virtualization engineer after proving myself with <strong>200+</strong> network implementation projects and <strong>100+</strong> virtualization implementation projects.</p>
+                </div>
+                <div class="experience_content">
+                    <h4 class="experience_date_header">2006 - 2008</h4>
+                    <p class="experience_title">Helpdesk Technician</p>
+                    <p>DRAW Enterprises</p>
+                    <p class="experience_summary">Honed my technical skills and quickly showed aptitude to manage servers and key environment components such as: citrix, network devices, servers, and firewalls.</p>
+                </div>
             </div>
         </div>
         <div class="skills container">
-            <div class="skills_header">
+            <div class="skills header">
                 <h2><span class="dot">.</span>Skills</h2>
             </div>
             <div class="skills_content">
@@ -144,16 +144,16 @@
             </div>
         </div>
         <div class="education container">
-            <div class="education_header">
-                <h2><span class="dot">.</span>Education & Certifications</h2>
+            <div class="education header">
+                <h2><span class="dot">.</span>Education &<br>Certifications</h2>
             </div>
             <div class="education_content">
                 <ul>
-                    <li>AWS Architect - Professional | 2021 & 2019</li>
-                    <li>AWS Architect - Associate | 2021 & 2019</li>
-                    <li>Next Generation Leaders Program | 2018</li>
-                    <li>VMware Certified Professional - Data Center Virtualization | 2012 & 2015</li>
-                    <li>CCNP (previously held) | 2015</li>
+                    <li>AWS Solutions Architect - Professional | 2022 & 2019</li>
+                    <li>AWS Solutions Architect - Associate | 2022 & 2019</li>
+                    <li>Next Generation Leaders Program | 2016 - 2017</li>
+                    <li>VMware Certified Professional - Data Center Virtualization | 2009 & 2013</li>
+                    <li>CCNP (previously held) | 2012</li>
                     <li>CCNA (previously held) | 2010</li>
                     <li>DeVry University | 2005 - 2006</li>
                 </ul>
