--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                     <br><br>
                     In many ways I'm like a star in the galaxy. I naturally pull a strong team together around me. To me, the best experience is working with a team who builds things together. Hands on, constantly improving everything we touch.</p>
             </div>
-            <img src="./media/images//ts_zachary_explaining.jpg" alt="Zachary Hill explaining a futurism concept to a group of people.">
+            <img src="./media/images/ts_zachary_explaining.jpg" alt="Zachary Hill explaining a futurism concept to a group of people.">
         </div>
         <div class="philosophy container">
             <div class="philosophy header">
@@ -82,9 +82,26 @@
         <div class="highlights container">
             <div class="highlights header">
                 <h3><span class="dot">.</span>Accolades & Highlights</h3>
-                <img src="./media/images/2022_aws_partner_award.jpg" alt="Zachary Hill accepting the AWS Partner Award 2022 with three AWS leaders.">
             </div>
             <div class="highlights content">
+                
+                <p>It's difficult to cover the breadth of my last 15 years without writing a long list. Instead, I'll try and cover some highlights which stand out to me.</p>
+                <h4>Highlights</h4>
+                <ul>
+                    <li>Team won a AWS 2022 & 2021 Partner of the year award.</li>
+                    <li>Architected scalable web application for major power company in the Nnited States. Required scaling from 10,000 concurrent users average to >4 million concurrent users.</li>
+                    <li>First organization and project to migrate >90% of credit union servers and core provider to AWS public cloud.</li>
+                    <li>Built out >98% of all terraform modules, 25,00+ lines of code, which are leveraged in projects and managed services</li>
+                    <li>Led incident response and recovery for 4 major ransomware events, including a major healthcare provider and major financial institution. Required migration of all services to the cloud in order to preserve forensics and speed recovery in parallel.</li>
+                    <li>Led and participated in design thinking sessions with organizations helping them to identify pain points, resolutions, and revolutionize their whole business in a new trajectory.</li>
+                    <li>Built the annual technology budget for 20+ financial intitutions for many years.</li>
+                    <li>Built the 1, 3, and 5 year technology strategy for 20+ financial institutions for many years.</li>
+                    <li>And most importantly, watched my team grow from individual young engineers into a tight-knit team of strong senior engineers and leaders.</li>
+                </ul>
+                <img src="./media/images/2022_aws_partner_award.jpg" alt="Zachary Hill accepting the AWS Partner Award 2022 with three AWS leaders.">
+                <img src="./media/images/ts_zachary_team_building.jpg" alt="Zachary Hill with group of people teambuilding by building bridges out of marshmellows and sticks.">
+                <img src="./media/images/ts_zachary_aws_speaking.jpeg" alt="Zachary Hill speaking at AWS re:invent 2022">
+                <img src="./media/images/2022_aws_partner_of_the_year.jpg" alt="2022 AWS Partner of the Year trophy sitting on a table.">
             </div>
         </div>
         <!-- Footer Copyright-->
