updated images for reduced sizes and added contact link tree

--- a/contact.html
+++ b/contact.html
@@ -44,14 +44,17 @@
             </nav>
         </header>
         <!-- Content-->
-        <!-- LinkedIn Icon and Link -->
-        <div class="right">
+        <div class="contact_form"></div>
+        <div class="link_tree">
+            <h4>My Links</h4>
+            <p>LinkedIn</p>
+            <!-- LinkedIn Icon and Link -->
             <a href="https://www.linkedin.com/in/zachary-hill-1b1b5b1a0/"><i class="fab fa-linkedin"></i></a>
-        </div>
-        <!-- GitHub Icon and Link -->
-        <div class="right">
+            <!-- GitHub Icon and Link -->
+            <p>GitHub</p>
             <a href="https://github.com/zachreborn"><i class="fa-brands fa-github"></i></a>
         </div>
+        
         <!-- Footer Copyright-->
         <footer>
             <div class="footer">
