updated grammer based on checker and feedback

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h4 class="experience_date_header">2008 - 2015</h4>
                     <p class="experience_title">Senior Network Engineer & Systems Engineer</p>
                     <p>RedZone Technologies</p>
-                    <p class="experience_summary">Took control of all networking projects within my first three months while self teaching myself CCNA courses. Focused on learning from the strongest senior engineers and quickly took lead on all projects assigned to me. Was the primary senior network and virtualization engineer after proving myself with <strong>200+</strong> network implementation projects and <strong>100+</strong> virtualization implementation projects.</p>
+                    <p class="experience_summary">Took control of all networking projects within my first three months while self-teaching with CCNA courses. Focused on learning from the strongest senior engineers and quickly took lead on all projects assigned to me. Was the primary senior network and virtualization engineer after proving myself with <strong>200+</strong> network implementation projects and <strong>100+</strong> virtualization implementation projects.</p>
                 </div>
                 <div class="experience_content">
                     <h4 class="experience_date_header">2006 - 2008</h4>
