removed accidently quotation mark in footer tag

--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
         <!-- Footer Copyright-->
         <footer>
             <div class="footer">
-                <p"><i class="fa-regular fa-copyright"></i> 2023 | Zachary Hill</p>
+                <p><i class="fa-regular fa-copyright"></i> 2023 | Zachary Hill</p>
             </div>
         </footer>
     </body>
