--- a/error.html
+++ b/error.html
@@ -30,8 +30,8 @@
             <a class="logo" href="index.html"><span class="dot">.</span>Zachary Hill</a>
             
             <!-- Menu Button -->
-            <input class="menu_button" type="checkbox" id="menu_button"/>
-            <label class="hamburger" for="menu_button"><span class="hamburger_line"></span></label>
+            <input class="menu-button" type="checkbox" id="menu-button"/>
+            <label class="hamburger" for="menu-button"><span class="hamburger_line"></span></label>
             
             <!-- Navigation Links -->
             <nav class="navbar">
@@ -50,7 +50,7 @@
                     <h1>Uhoh, <span class="greetings_emphasis">something went wrong.</span></h1>
                     <p>The wizards must be fighting.</p>
                 </div>
-                <img src="./media/images/error_wizards.png" alt="Two wizards facing off in an epic duel." id="headshot_image">
+                <img src="./media/images/error_wizards.png" alt="Two wizards facing off in an epic duel." id="headshot-image">
             </div>
         </div>
         <!-- Footer Copyright-->
