--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <a class="logo" href="index.html"><span class="dot">.</span>Zachary Hill</a>
             
             <!-- Menu Button -->
-            <input class="menu_button" type="checkbox" id="menu_button"/>
-            <label class="hamburger" for="menu_button"><span class="hamburger_line"></span></label>
+            <input class="menu-button" type="checkbox" id="menu-button"/>
+            <label class="hamburger" for="menu-button"><span class="hamburger_line"></span></label>
             
             <!-- Navigation Links -->
             <nav class="navbar">
@@ -50,7 +50,7 @@
                 <h2>Chief Technology Officer</h2>
                 <p>Technologist / Leader / Maven / Architect / Engineer / Solver of Problems / Adventure Enthusiast</p>
             </div>
-            <img src="./media/images/ts_zachary_bw.jpg" alt="Zachary Hill laughing while looking into the camera." id="headshot_image">
+            <img src="./media/images/ts_zachary_bw.jpg" alt="Zachary Hill laughing while looking into the camera." id="headshot-image">
         </div>
         <!-- Content-->
         <div class="experience container">
