--- a/architecture.html
+++ b/architecture.html
@@ -30,8 +30,8 @@
             <a class="logo" href="index.html"><span class="dot">.</span>Zachary Hill</a>
             
             <!-- Menu Button -->
-            <input class="menu_button" type="checkbox" id="menu_button"/>
-            <label class="hamburger" for="menu_button"><span class="hamburger_line"></span></label>
+            <input class="menu-button" type="checkbox" id="menu-button"/>
+            <label class="hamburger" for="menu-button"><span class="hamburger_line"></span></label>
             
             <!-- Navigation Links -->
             <nav class="navbar">
