escaping out ampersand

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="experience_content">
                     <h4 class="experience_date_header">2008 - 2015</h4>
-                    <p class="experience_title">Senior Network Engineer & Systems Engineer</p>
+                    <p class="experience_title">Senior Network Engineer &amp Systems Engineer</p>
                     <p>RedZone Technologies</p>
                     <p class="experience_summary">Took control of all networking projects within my first three months while self-teaching with CCNA courses. Focused on learning from the strongest senior engineers and quickly took lead on all projects assigned to me. Was the primary senior network and virtualization engineer after proving myself with <strong>200+</strong> network implementation projects and <strong>100+</strong> virtualization implementation projects.</p>
                 </div>
@@ -90,7 +90,7 @@
             </div>
             <div class="skills_content">
                 <!-- Architecture & Design -->
-                <h5 class="skill">Architecture & Design
+                <h5 class="skill">Architecture &amp Design
                     <span>98%</span>
                 </h5>
                 <div class="meter">
@@ -156,14 +156,14 @@
         </div>
         <div class="education container">
             <div class="education header">
-                <h3><span class="dot">.</span>Education &<br>Certifications</h3>
+                <h3><span class="dot">.</span>Education &amp<br>Certifications</h3>
             </div>
             <div class="education_content">
                 <ul>
-                    <li>AWS Solutions Architect - Professional | 2022 & 2019</li>
-                    <li>AWS Solutions Architect - Associate | 2022 & 2019</li>
+                    <li>AWS Solutions Architect - Professional | 2022 &amp 2019</li>
+                    <li>AWS Solutions Architect - Associate | 2022 &amp 2019</li>
                     <li>Next Generation Leaders Program | 2016 - 2017</li>
-                    <li>VMware Certified Professional - Data Center Virtualization | 2009 & 2013</li>
+                    <li>VMware Certified Professional - Data Center Virtualization | 2009 &amp 2013</li>
                     <li>CCNP (previously held) | 2012</li>
                     <li>CCNA (previously held) | 2010</li>
                     <li>DeVry University | 2005 - 2006</li>
