--- a/about.html
+++ b/about.html
@@ -45,16 +45,16 @@
         </header>
 
         <!-- Content-->
-        <div class="about_me container">
-            <div class="about_me header">
+        <div class="about-me container">
+            <div class="about-me header">
                 <h3><span class="dot">.</span>About Me</h3>
             </div>
-            <div class="about_me content">
+            <div class="about-me content">
                 <p>My leadership style is that of a transformational leader. I have a unique perspective on the interplay of technology and business from both the breadth and depth of my body of work. That work spanned varying organization sizes and industry types. I began working with my previous two organizations while they were in the startup phase. Each company was a managed service provider or MSP. While there, I worked with established organizations ranging from 50+ employees to 6000+ employees. I've worked with enormous healthcare organizations, tiny financial institutions, technology firms, hospitality organizations, construction, and enormous financial institutions. This perspective has given me an understanding of the evolution an organization goes through in its lifetime. This experience has helped me to hone in and focus on what matters most for each organization, in both the present and future, by leveraging design thinking principles.
                     <br><br>
                     Most recently, I have had the privilege of working with a fantastic leaderhip team at Think|Stack. A pivotal person on that team and in my career has been Chris Sachse, CEO at Think|Stack. Chris is a forward thinker when it comes to innovation in business, design thinking, and putting people first. I've learned a lot about how to be a better leader through Chris.
                     <br><br>
-                    You'll find that I enjoy amping up my team both behind the scenes and publicly. Whether that be taking the time to explore the team's hobbies with them, hosting a session of D&D, an escape room happy hour, or making sure our customers know the impact each individual team member is having for them. I come from a history of playing team sports. Sports taught me the value in lifting up those around you. The power of confidence and positive thinking in any one member of a team can spread like wildfire and allow for impressive feats, previously thought impossible. In that same way, failure is something a team bears the burden of together. A single play may have been what sticks in one's memories, but it was the team that brought that play to be. Even in that case, failure is merely a learning opportunity put forth right in front of your eyes. A guidepost pointing you and the team towards continuous improvement.
+                    You'll find that I enjoy amping up my team both behind the scenes and publicly. Whether that be taking the time to explore the team's hobbies with them, hosting a session of D&ampD, an escape room happy hour, or making sure our customers know the impact each individual team member is having for them. I come from a history of playing team sports. Sports taught me the value in lifting up those around you. The power of confidence and positive thinking in any one member of a team can spread like wildfire and allow for impressive feats, previously thought impossible. In that same way, failure is something a team bears the burden of together. A single play may have been what sticks in one's memories, but it was the team that brought that play to be. Even in that case, failure is merely a learning opportunity put forth right in front of your eyes. A guidepost pointing you and the team towards continuous improvement.
                     <br><br>
                     Interestingly, I'm just as comfortable delivering a presentation to a board as I am rolling up my sleeves writing code behind the scenes. I never stray too far from my roots as a network engineer: doodling a topology diagram on whiteboard, organizing thoughts and ideas on my tablet, and unpacking the nitty gritty details of a technology. By putting a piece of technology within my hands I can turn it around and view it from all angles. Doing so helps me to understand how it can be placed within a larger system.
                     <br><br>
@@ -81,14 +81,14 @@
         </div>
         <div class="highlights container">
             <div class="highlights header">
-                <h3><span class="dot">.</span>Accolades & Highlights</h3>
+                <h3><span class="dot">.</span>Accolades &amp Highlights</h3>
             </div>
             <div class="highlights content">
                 
                 <p>It's difficult to cover the breadth of my last 15 years without writing a long list. Instead, I'll try and cover some highlights which stand out to me.</p>
                 <h4>Highlights</h4>
                 <ul>
-                    <li>Team won a AWS 2022 & 2021 Partner of the year award.</li>
+                    <li>Team won a AWS 2022 &amp 2021 Partner of the year award.</li>
                     <li>Architected scalable web application for major power company in the United States. Required scaling from 10,000 concurrent users average to >4 million concurrent users.</li>
                     <li>First organization and project to migrate >90% of credit union servers and core provider to AWS public cloud.</li>
                     <li>Built out >98% of all terraform modules, 25,000+ lines of code, which are leveraged in projects and managed services</li>
