escape characters for greater than sign and more clear ampersand

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                     <br><br>
                     Most recently, I have had the privilege of working with a fantastic leaderhip team at Think|Stack. A pivotal person on that team and in my career has been Chris Sachse, CEO at Think|Stack. Chris is a forward thinker when it comes to innovation in business, design thinking, and putting people first. I've learned a lot about how to be a better leader through Chris.
                     <br><br>
-                    You'll find that I enjoy amping up my team both behind the scenes and publicly. Whether that be taking the time to explore the team's hobbies with them, hosting a session of D&ampD, an escape room happy hour, or making sure our customers know the impact each individual team member is having for them. I come from a history of playing team sports. Sports taught me the value in lifting up those around you. The power of confidence and positive thinking in any one member of a team can spread like wildfire and allow for impressive feats, previously thought impossible. In that same way, failure is something a team bears the burden of together. A single play may have been what sticks in one's memories, but it was the team that brought that play to be. Even in that case, failure is merely a learning opportunity put forth right in front of your eyes. A guidepost pointing you and the team towards continuous improvement.
+                    You'll find that I enjoy amping up my team both behind the scenes and publicly. Whether that be taking the time to explore the team's hobbies with them, hosting a session of D&#38;D, an escape room happy hour, or making sure our customers know the impact each individual team member is having for them. I come from a history of playing team sports. Sports taught me the value in lifting up those around you. The power of confidence and positive thinking in any one member of a team can spread like wildfire and allow for impressive feats, previously thought impossible. In that same way, failure is something a team bears the burden of together. A single play may have been what sticks in one's memories, but it was the team that brought that play to be. Even in that case, failure is merely a learning opportunity put forth right in front of your eyes. A guidepost pointing you and the team towards continuous improvement.
                     <br><br>
                     Interestingly, I'm just as comfortable delivering a presentation to a board as I am rolling up my sleeves writing code behind the scenes. I never stray too far from my roots as a network engineer: doodling a topology diagram on whiteboard, organizing thoughts and ideas on my tablet, and unpacking the nitty gritty details of a technology. By putting a piece of technology within my hands I can turn it around and view it from all angles. Doing so helps me to understand how it can be placed within a larger system.
                     <br><br>
@@ -81,17 +81,17 @@
         </div>
         <div class="highlights container">
             <div class="highlights header">
-                <h3><span class="dot">.</span>Accolades &amp Highlights</h3>
+                <h3><span class="dot">.</span>Accolades &#38; Highlights</h3>
             </div>
             <div class="highlights content">
                 
                 <p>It's difficult to cover the breadth of my last 15 years without writing a long list. Instead, I'll try and cover some highlights which stand out to me.</p>
                 <h4>Highlights</h4>
                 <ul>
-                    <li>Team won a AWS 2022 &amp 2021 Partner of the year award.</li>
-                    <li>Architected scalable web application for major power company in the United States. Required scaling from 10,000 concurrent users average to >4 million concurrent users.</li>
-                    <li>First organization and project to migrate >90% of credit union servers and core provider to AWS public cloud.</li>
-                    <li>Built out >98% of all terraform modules, 25,000+ lines of code, which are leveraged in projects and managed services</li>
+                    <li>Team won a AWS 2022 &#38; 2021 Partner of the year award.</li>
+                    <li>Architected scalable web application for major power company in the United States. Required scaling from 10,000 concurrent users average to &#62;4 million concurrent users.</li>
+                    <li>First organization and project to migrate &#62;90% of credit union servers and core provider to AWS public cloud.</li>
+                    <li>Built out &#62;98% of all terraform modules, 25,000+ lines of code, which are leveraged in projects and managed services</li>
                     <li>Led incident response and recovery for 4 major ransomware events, including a major healthcare provider and major financial institution. Required migration of all services to the cloud in order to preserve forensics and speed recovery in parallel.</li>
                     <li>Led and participated in design thinking sessions with organizations helping them to identify pain points, resolutions, and revolutionize their whole business in a new trajectory.</li>
                     <li>Built the annual technology budget for 20+ financial intitutions for many years.</li>
