linting fixes to change from underscores to dashes in html classes and ids

--- a/error.html
+++ b/error.html
@@ -46,7 +46,7 @@
         <!-- Content-->
         <div class="error container">
             <div class="greetings">
-                <div class="greetings_text">
+                <div class="greetings-text">
                     <h1>Uhoh, <span class="greetings_emphasis">something went wrong.</span></h1>
                     <p>The wizards must be fighting.</p>
                 </div>
