--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </header>
         <!-- Greetings-->
         <div class="greetings container">
-            <div class="greetings_text">
+            <div class="greetings-text">
                 <h1>Hi, I'm <span class="greetings_emphasis">Zachary.</span></h1>
                 <h2>Chief Technology Officer</h2>
                 <p>Technologist / Leader / Maven / Architect / Engineer / Solver of Problems / Adventure Enthusiast</p>
@@ -57,30 +57,30 @@
             <div class="experience header">
                 <h3><span class="dot">.</span>Experience</h3>
             </div>
-            <div class="test_container">
-                <div class="experience_content">
-                    <h4 class="experience_date_header">2018 - Present</h4>
-                    <p class="experience_title">Chief Technology Officer</p>
-                    <p class="experience_company">Think|Stack</p>
-                    <p class="experience_summary">Technical visionary, strategist, and team leader. I built the services and projects we sold to our customers with an eye towards common sense and putting myself in the shoes of our customers. My focus was on understanding problems in order to design and build out solutions that could be implemented by a team which included our engineers and our customer's technical team(s).</p>
+            <div class="timeline-container">
+                <div class="experience-content">
+                    <h4 class="experience-date-header">2018 - Present</h4>
+                    <p class="experience-title">Chief Technology Officer</p>
+                    <p class="experience-company">Think|Stack</p>
+                    <p class="experience-summary">Technical visionary, strategist, and team leader. I built the services and projects we sold to our customers with an eye towards common sense and putting myself in the shoes of our customers. My focus was on understanding problems in order to design and build out solutions that could be implemented by a team which included our engineers and our customer's technical team(s).</p>
                 </div>
-                <div class="experience_content">
-                    <h4 class="experience_date_header">2016 - 2018</h4>
-                    <p class="experience_title">VP of Architecture</p>
+                <div class="experience-content">
+                    <h4 class="experience-date-header">2016 - 2018</h4>
+                    <p class="experience-title">VP of Architecture</p>
                     <p>Think|Stack</p>
-                    <p class="experience_summary">Built out a project team in my first year in order to expand projects offered. Turned my focus to designing and building out a cloud practice, specifically with AWS and Microsoft 365 centered around a DevSecOps framework to support scalable, flexible, and secure projects and management of cloud environments. Wrote over 25,000 lines of terraform code to automate and standardize projects. Took over the sales team technical engagements, quoting, and approval process for jobs going to our customers.</p>
+                    <p class="experience-summary">Built out a project team in my first year in order to expand projects offered. Turned my focus to designing and building out a cloud practice, specifically with AWS and Microsoft 365 centered around a DevSecOps framework to support scalable, flexible, and secure projects and management of cloud environments. Wrote over 25,000 lines of terraform code to automate and standardize projects. Took over the sales team technical engagements, quoting, and approval process for jobs going to our customers.</p>
                 </div>
-                <div class="experience_content">
-                    <h4 class="experience_date_header">2008 - 2015</h4>
-                    <p class="experience_title">Senior Network Engineer &#38; Systems Engineer</p>
+                <div class="experience-content">
+                    <h4 class="experience-date-header">2008 - 2015</h4>
+                    <p class="experience-title">Senior Network Engineer &#38; Systems Engineer</p>
                     <p>RedZone Technologies</p>
-                    <p class="experience_summary">Took control of all networking projects within my first three months while self-teaching with CCNA courses. Focused on learning from the strongest senior engineers and quickly took lead on all projects assigned to me. Was the primary senior network and virtualization engineer after proving myself with <strong>200+</strong> network implementation projects and <strong>100+</strong> virtualization implementation projects.</p>
+                    <p class="experience-summary">Took control of all networking projects within my first three months while self-teaching with CCNA courses. Focused on learning from the strongest senior engineers and quickly took lead on all projects assigned to me. Was the primary senior network and virtualization engineer after proving myself with <strong>200+</strong> network implementation projects and <strong>100+</strong> virtualization implementation projects.</p>
                 </div>
-                <div class="experience_content">
-                    <h4 class="experience_date_header">2006 - 2008</h4>
-                    <p class="experience_title">Helpdesk Technician</p>
+                <div class="experience-content">
+                    <h4 class="experience-date-header">2006 - 2008</h4>
+                    <p class="experience-title">Helpdesk Technician</p>
                     <p>DRAW Enterprises</p>
-                    <p class="experience_summary">Honed my technical skills and quickly showed aptitude to manage servers and key environment components such as: citrix, network devices, servers, and firewalls.</p>
+                    <p class="experience-summary">Honed my technical skills and quickly showed aptitude to manage servers and key environment components such as: citrix, network devices, servers, and firewalls.</p>
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
             <div class="skills header">
                 <h3><span class="dot">.</span>Skills</h3>
             </div>
-            <div class="skills_content">
+            <div class="skills-content">
                 <!-- Architecture & Design -->
                 <h5 class="skill">Architecture &#38; Design
                     <span>98%</span>
@@ -158,7 +158,7 @@
             <div class="education header">
                 <h3><span class="dot">.</span>Education &#38;<br>Certifications</h3>
             </div>
-            <div class="education_content">
+            <div class="education-content">
                 <ul>
                     <li>AWS Solutions Architect - Professional | 2022 &#38; 2019</li>
                     <li>AWS Solutions Architect - Associate | 2022 &#38; 2019</li>
@@ -173,7 +173,7 @@
         <!-- Footer Copyright-->
         <footer>
             <div class="footer">
-                <p"><i class="fa-regular fa-copyright"></i> 2023 | Zachary Hill</p>
+                <p><i class="fa-regular fa-copyright"></i> 2023 | Zachary Hill</p>
             </div>
         </footer>
     </body>
