okay final one on hyphenation

--- a/error.html
+++ b/error.html
@@ -47,7 +47,7 @@
         <div class="error container">
             <div class="greetings">
                 <div class="greetings-text">
-                    <h1>Uhoh, <span class="greetings_emphasis">something went wrong.</span></h1>
+                    <h1>Uhoh, <span class="greetings-emphasis">something went wrong.</span></h1>
                     <p>The wizards must be fighting.</p>
                 </div>
                 <img src="./media/images/error_wizards.png" alt="Two wizards facing off in an epic duel." id="headshot-image">
