--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!-- Greetings-->
         <div class="greetings container">
             <div class="greetings-text">
-                <h1>Hi, I'm <span class="greetings_emphasis">Zachary.</span></h1>
+                <h1>Hi, I'm <span class="greetings-emphasis">Zachary.</span></h1>
                 <h2>Chief Technology Officer</h2>
                 <p>Technologist / Leader / Maven / Architect / Engineer / Solver of Problems / Adventure Enthusiast</p>
             </div>
