added closing form

--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,7 @@
                 <label for="subject">Subject</label>
                 <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
                 <input type="submit" value="Submit">
+            </form>
         </div>
         <div class="link_tree content">
             <h4>My Links</h4>
