--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
             </nav>
         </header>
         <!-- Content-->
-        <div class="contact_form content">
+        <div class="contact-form content">
             <h1>Contact Me</h1>
             <form action="mailto:zhill@zacharyhill.co>" method="post" enctype="text/plain">
                 <label for="name">Name</label>
@@ -56,7 +56,7 @@
                 <input type="submit" value="Submit">
             </form>
         </div>
-        <div class="link_tree content">
+        <div class="link-tree content">
             <h4>My Links</h4>
             <p>LinkedIn</p>
             <!-- LinkedIn Icon and Link -->
