many changes to adding the favicon and resume pdf

--- a/contact.html
+++ b/contact.html
@@ -44,9 +44,9 @@
             </nav>
         </header>
         <!-- Content-->
-        <div class="contact-form content">
+        <div class="contact-form container content">
             <h1>Contact Me</h1>
-            <form action="mailto:zhill@zacharyhill.co>" method="post" enctype="text/plain">
+            <form action="mailto:>" method="post" enctype="text/plain">
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" placeholder="Your name..">
                 <label for="email">Email</label>
@@ -56,14 +56,14 @@
                 <input type="submit" value="Submit">
             </form>
         </div>
-        <div class="link-tree content">
+        <div class="link-tree container content">
             <h4>My Links</h4>
             <p>LinkedIn</p>
             <!-- LinkedIn Icon and Link -->
-            <a href="https://www.linkedin.com/in/zachary-hill-1b1b5b1a0/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/zachary-hill-1b1b5b1a0/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
             <!-- GitHub Icon and Link -->
             <p>GitHub</p>
-            <a href="https://github.com/zachreborn"><i class="fa-brands fa-github"></i></a>
+            <a href="https://github.com/zachreborn" target="_blank"><i class="fa-brands fa-github fa-3x"></i></a>
         </div>
         
         <!-- Footer Copyright-->
